# pttkey

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  pttkey.service
.github/workflows/: ci.yml  release.yml
src/: audio.rs  config.rs  constants.rs  main.rs
