[package]
name = "pttkey"
version = "0.2.6"
edition = "2021"

[dependencies]
evdev = "0.13.2"
anyhow = "1.0"
which = "8.0.0"
ctrlc = "3.5.1"
rodio = { version = "0.21.1", default-features = false, features = ["mp3", "wav", "vorbis", "playback"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
libc = "0.2"
